# MusicPilot

./: .gitignore  COPYRIGHT_NOTICE.md  DEPLOY.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: __init__.py  factory.py  main.py
backend/app/api/: apiv1.py
backend/app/api/endpoints/: __init__.py  album.py  artist.py  covers.py  library.py  metadata.py  player.py  playlist.py  site.py  stream.py  subscribe.py  track.py  (+1 more)
backend/app/chain/: __init__.py  download.py  downloader.py  media.py  metadata.py  musicbrainz.py  playback.py  playlist.py  subscribe.py  torrents.py  transfer.py
backend/app/core/: __init__.py  cache.py  chain.py  config.py  context.py  event.py  log.py  meta.py  module.py  plugin.py
backend/app/db/: __init__.py  init.py
backend/app/modules/: downloader_module.py  site_module.py
backend/app/schemas/: __init__.py  album.py  artist.py  download.py  library.py  media.py  playlist.py  response.py  site.py  subscribe.py  subscribe_release.py  system.py  track.py  types.py
backend/app/tasks/: __init__.py  download_monitor.py  subscribe_check.py
backend/tests/: __init__.py  conftest.py  test_cache.py  test_chain_base.py  test_db_operations.py  test_download_chain.py  test_event.py  test_media_chain.py  test_meta.py  test_metadata_chain.py  test_module_manager.py  test_musicbrainz_chain.py  test_playlist_chain.py  test_plugin_manager.py
(+112 files in other folders)
